CORE-42939: Color variables renamed for adv pages.

--- a/docroot/themes/custom/transac/alshaya_american_eagle/conditional-sass/advanced-page-paragraph-accordion/component/_advanced-page-paragraph-accordion.scss
+++ b/docroot/themes/custom/transac/alshaya_american_eagle/conditional-sass/advanced-page-paragraph-accordion/component/_advanced-page-paragraph-accordion.scss
@@ -1,7 +1,7 @@
-.egift-landing-page {
+.nodetype--advanced_page {
   .c-accordion-delivery-option-parent {
     .field--name-field-group-title {
-      color: $egift-banner-title;
+      color: $advanced-page-banner-title;
     }
 
     .c-accordion__title {
