--- a/docroot/themes/custom/transac/alshaya_american_eagle/conditional-sass/advanced-page-paragraph-banner/component/_advanced-page-paragraph-banner.scss
+++ b/docroot/themes/custom/transac/alshaya_american_eagle/conditional-sass/advanced-page-paragraph-banner/component/_advanced-page-paragraph-banner.scss
@@ -2,7 +2,7 @@
   .paragraph_banner_title_subtitle {
     .field--name-field-title,
     .field--name-field-sub-title {
-      color: $egift-banner-title;
+      color: $advanced-page-banner-title;
     }
   }
 }
