--- a/docroot/themes/custom/transac/alshaya_american_eagle/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_american_eagle/sass/config/_colors.scss
@@ -715,9 +715,7 @@ $plp-quick-view-product-size-border-hover: $black;
 $plp-quick-view-product-size-text-disabled: $grey;
 
 //eGift.
-$egift-banner-bg: $bright_gray;
 $egift-banner-title: $dark_gray;
-$egift-accordion-active-title: $black;
 $egift-purchase-page-title: $black;
 $egift-card-redeem-button: $black;
 $egift-myaccount-button: $royal-blue;
@@ -740,3 +738,8 @@ $online-return-confirmation-border: $gallery;
 $online-return-light-bg: $white;
 $online-return-total-price-bg: $white_smoke;
 $online-return-print-cancel-border: $light-greyish;
+
+// Advanced Page components.
+$advanced-page-accordion-active-title: $black;
+$advanced-page-banner-bg: $bright_gray;
+$advanced-page-banner-title: $dark_gray;
