--- a/docroot/themes/custom/transac/alshaya_bathbodyworks/conditional-sass/advanced-page-paragraph-accordion/component/_advanced-page-paragraph-accordion.scss
+++ b/docroot/themes/custom/transac/alshaya_bathbodyworks/conditional-sass/advanced-page-paragraph-accordion/component/_advanced-page-paragraph-accordion.scss
@@ -1,4 +1,4 @@
-.egift-landing-page {
+.nodetype--advanced_page {
   .c-accordion-delivery-option-parent {
     .field--name-field-group-title {
       font-family: $alshaya-thin;
