--- a/docroot/themes/custom/transac/alshaya_boots/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_boots/sass/config/_colors.scss
@@ -603,6 +603,6 @@ $spc-cart-delivery-popup-search-border: $black-two;
 // Country Switcher
 $country-switcher-label-mobile: $black-two;
 
-// eGift Landing page
-$egift-banner-bg: $_egift_landing_page_banner_bg;
-$egift-accordion-active-title: $marine-blue;
+// Advanced Page components.
+$advanced-page-accordion-active-title: $marine-blue;
+$advanced-page-banner-bg: $_egift_landing_page_banner_bg;
