--- a/docroot/themes/custom/transac/alshaya_cos_stores/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_cos_stores/sass/config/_colors.scss
@@ -483,12 +483,12 @@ $wishlist-oos: $blood;
 // Country Switcher
 $country-switcher-label-mobile: $black-two;
 
-// eGift Landing page
-$egift-accordion-active-title: $black;
-$egift-banner-bg: $bright-gray;
-$egift-accordion-bg: $bright-gray;
-
 // eGift purchase page
 $egift-amount-list-border: $bright-gray;
 $egift-amount-list-text: $eerie-black;
 $egift-card-list-border: $eerie-black;
+
+// Advanced Page components.
+$advanced-page-accordion-active-title: $black;
+$advanced-page-accordion-bg: $bright-gray;
+$advanced-page-banner-bg: $bright-gray;
