--- a/docroot/themes/custom/transac/alshaya_debenhams/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_debenhams/sass/config/_colors.scss
@@ -475,10 +475,7 @@ $plp_quick_color_variant_hover_border: $black-two;
 $plp-quick-view-product-text: $white;
 
 // eGift landing page.
-$egift-accordion-active-title: $black-two;
-$egift-banner-bg: $anti-flash-white;
 $egift-landing-page-one-row-two-col-box-bg: $anti-flash-white;
-$egift-accordion-bg: $anti-flash-white;
 
 // eGift purchase page.
 $egift-active-amount-card-border: $black-two;
@@ -491,3 +488,8 @@ $wishlist-button-border: $medium-sky-blue;
 
 // same day delivery
 $pdp_product_same_day_btn_border: $sky_blue;
+
+// Advanced Page components.
+$advanced-page-accordion-active-title: $black-two;
+$advanced-page-accordion-bg: $anti-flash-white;
+$advanced-page-banner-bg: $anti-flash-white;
