--- a/docroot/themes/custom/transac/alshaya_footlocker/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_footlocker/sass/config/_colors.scss
@@ -632,6 +632,6 @@ $my-wishlist-share-modal-header: $black;
 $wishlist-newpdp-button-border: $black;
 $wishlist-newpdp-button: $red;
 
-// eGift Landing page
-$egift-accordion-active-title: $primary_link-active;
-$egift-banner-bg: $_egift_landing_page_banner_bg;
+// Advanced Page components.
+$advanced-page-accordion-active-title: $primary_link-active;
+$advanced-page-banner-bg: $_egift_landing_page_banner_bg;
