--- a/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/advanced-page-paragraph-banner/component/_advanced-page-paragraph-banner.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/advanced-page-paragraph-banner/component/_advanced-page-paragraph-banner.scss
@@ -1,4 +1,4 @@
-.egift-landing-page {
+.nodetype--advanced_page {
   .paragraph_banner_block {
     .paragraph_banner_title_subtitle {
       .field--name-field-title {
