--- a/docroot/themes/custom/transac/alshaya_mothercare/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_mothercare/sass/config/_colors.scss
@@ -15,5 +15,5 @@ $magv2-panel-close-icon: $marine-blue;
 $magv2-gallery-popup-cross: $marine-blue;
 $menu-chevron: $marine-blue-two;
 
-// eGift landing page.
-$egift-accordion-active-title: $marine-blue-two;
+// Advanced Page components.
+$advanced-page-accordion-active-title: $marine-blue-two;
