--- a/docroot/themes/custom/transac/alshaya_pottery_barn/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_pottery_barn/sass/config/_colors.scss
@@ -660,5 +660,7 @@ $country-switcher-label: $PB_grey_one;
 
 // eGift Landing page
 $egift-primary-text: $_black_two;
-$egift-accordion-active-title: $_black_two;
-$egift-banner-bg: $_gray_five;
+
+// Advanced Page components.
+$advanced-page-accordion-active-title: $_black_two;
+$advanced-page-banner-bg: $_gray_five;
