--- a/docroot/themes/custom/transac/alshaya_the_body_shop/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_the_body_shop/sass/config/_colors.scss
@@ -588,6 +588,6 @@ $country-switcher-label: $natural-warmth-three;
 $country-switcher-label-mobile: $white;
 $country-switcher-dropdown: $cyprus;
 
-// eGift landing page.
-$egift-accordion-active-title: $cyprus;
-$egift-accordion-bg: $nourishing-white;
+// Advanced Page components.
+$advanced-page-accordion-active-title: $cyprus;
+$advanced-page-accordion-bg: $nourishing-white;
