--- a/docroot/themes/custom/transac/alshaya_victoria_secret/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_victoria_secret/sass/config/_colors.scss
@@ -1197,10 +1197,6 @@ $wishlist-basket-button-border: $matterhorn;
 $sameday-express-delivery-drawer-btn: $primary_btn_bg;
 $spc-cart-delivery-popup-search-border: $secondary_border;
 
-// eGift landing page.
-$egift-accordion-active-title: $mothercare-black;
-$egift-banner-bg: $_egift_landing_page_banner_bg;
-
 // Review and Rating
 $rr-review-summary-btn-color: $brilliant-rose;
 $rr-review-summary-btn-border: $brilliant-rose;
@@ -1229,3 +1225,7 @@ $rr-recommendation-icon-bg: $brilliant-rose;
 $rr-review-summary-btn-text: $matterhorn;
 $rr-recommendation-icon: $mothercare-black;
 $rr-switchOn-active-txt: $matterhorn;
+
+// Advanced Page components.
+$advanced-page-accordion-active-title: $mothercare-black;
+$advanced-page-banner-bg: $_egift_landing_page_banner_bg;
