--- a/docroot/themes/custom/transac/alshaya_westelm/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_westelm/sass/config/_colors.scss
@@ -676,8 +676,10 @@ $my-wishlist-share-modal-header: $WE_grey_three;
 $pdp-delivery-section-subtitle: $WE_grey_two;
 
 //eGift
-$egift-banner-bg: $WE_light_yellow;
-$egift-accordion-active-title: $WE_metallic_gold;
 $egift-myaccount-button: $WE_grey_three;
 $egift-myaccount-topup-button: $WE_grey_three;
 $egift-myaccount-topup-button-text: $WE_white;
+
+// Advanced Page components.
+$advanced-page-accordion-active-title: $WE_metallic_gold;
+$advanced-page-banner-bg: $WE_light_yellow;
