--- a/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/advanced-page-paragraph-accordion/component/_advanced-page-paragraph-accordion.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/advanced-page-paragraph-accordion/component/_advanced-page-paragraph-accordion.scss
@@ -1,4 +1,4 @@
-.egift-landing-page {
+.nodetype--advanced_page {
   .c-accordion-delivery-option-parent {
     .c-accordion__title {
       font-family: $hnm-demibold;
