--- a/docroot/themes/custom/transac/alshaya_hnm/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/sass/config/_colors.scss
@@ -832,10 +832,6 @@ $my-wishlist-share-modal-header: $hnm-black-three;
 $country-switcher-label: $hnm-black-three;
 $country-switcher-label-mobile: $hnm-black-three;
 
-// eGift landing page.
-$egift-accordion-active-title: $venetian_red;
-$egift-accordion-bg: $primary_bg;
-
 // Online Returns
 $online-return-eligibility-button-txt: $hnm-black-three;
 $online-return-dark-txt: $hnm-black-three;
@@ -870,3 +866,7 @@ $hello-member-accured-points-txt: $hnm-red;
 
 //hello member header block
 $hello-member-menu-link-txt: $hnm-black-two;
+
+// Advanced Page components.
+$advanced-page-accordion-active-title: $venetian_red;
+$advanced-page-accordion-bg: $primary_bg;
