--- a/docroot/themes/custom/transac/alshaya_mothercare/conditional-sass/advanced-page-paragraph-banner/component/_advanced-page-paragraph-banner.scss
+++ b/docroot/themes/custom/transac/alshaya_mothercare/conditional-sass/advanced-page-paragraph-banner/component/_advanced-page-paragraph-banner.scss
@@ -2,7 +2,7 @@
   .paragraph_banner_title_subtitle {
     .field--name-field-title,
     .field--name-field-sub-title {
-      color: $egift-banner-title;
+      color: $advanced-page-banner-title;
     }
   }
 
@@ -10,23 +10,23 @@
     .field--name-field-links {
       .field--name-field-links {
         a {
-          color: $egift-landing-page-button;
-          border-color: $egift-landing-page-button;
+          color: $advanced-page-button;
+          border-color: $advanced-page-button;
 
           &:hover {
-            background: $egift-landing-page-button-hover;
+            background: $advanced-page-button-hover;
           }
         }
 
         &:last-child {
           a {
-            background-color: $egift-landing-page-button;
+            background-color: $advanced-page-button;
             color: $primary_btn_text;
-            border-color: $egift-landing-page-button;
+            border-color: $advanced-page-button;
 
             &:hover {
-              background: $egift-accordion-active-title;
-              border-color: $egift-accordion-active-title;
+              background: $advanced-page-accordion-active-title;
+              border-color: $advanced-page-accordion-active-title;
             }
           }
         }
