--- a/docroot/themes/custom/transac/alshaya_muji/conditional-sass/advanced-page-paragraph-accordion/component/_advanced-page-paragraph-accordion.scss
+++ b/docroot/themes/custom/transac/alshaya_muji/conditional-sass/advanced-page-paragraph-accordion/component/_advanced-page-paragraph-accordion.scss
@@ -1,4 +1,4 @@
-.egift-landing-page {
+.nodetype--advanced_page {
   .c-accordion-delivery-option-parent {
     .c-accordion__title {
       &::after {
@@ -12,7 +12,7 @@
           transform: rotate(270deg);
           top: 1.1rem;
           #{$right}: 1.1125rem;
-          border-color: transparent transparent transparent $egift-accordion-active-title;
+          border-color: transparent transparent transparent $advanced-page-accordion-active-title;
         }
       }
     }
