--- a/docroot/themes/custom/transac/alshaya_muji/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_muji/sass/config/_colors.scss
@@ -702,8 +702,6 @@ $country-switcher-label-mobile: $black;
 
 // eGift Landing page
 $egift-primary-text: $primary_text;
-$egift-accordion-active-title: $primary_link-active;
-$egift-banner-bg: $_egift_landing_page_banner_bg;
 
 // PLP add to cart.
 $plp-quick-view-product-size-text-active: $black;
@@ -717,3 +715,7 @@ $plp-quick-view-product-size-text: $black;
 $plp-quick-view-product-size-hover-bg: $white-smoke-light;
 $plp-quick-view-product-size-disabled-border: $whisper-dark;
 $plp-quick-view-product-size-text-disabled: $black;
+
+// Advanced Page components.
+$advanced-page-accordion-active-title: $primary_link-active;
+$advanced-page-banner-bg: $_egift_landing_page_banner_bg;
