--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/advanced-page-paragraph-banner/component/_advanced-page-paragraph-banner.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/advanced-page-paragraph-banner/component/_advanced-page-paragraph-banner.scss
@@ -1,4 +1,4 @@
-@mixin egift-btn {
+@mixin advanced-page-btn {
   height: 3rem;
   display: flex;
   align-items: center;
@@ -11,7 +11,7 @@
   margin: 0 auto;
 }
 
-.egift-landing-page {
+.nodetype--advanced_page {
   .c-content {
     .c-content__slider {
       max-width: 64.125rem;
@@ -25,7 +25,7 @@
   }
 
   .paragraph-image_title_subtitle_link {
-    background-color: $egift-banner-bg;
+    background-color: $advanced-page-banner-bg;
     padding: 5.625rem 4.625rem;
 
     @include breakpoint($only-mobile) {
@@ -101,7 +101,7 @@
         }
 
         a {
-          @include egift-btn;
+          @include advanced-page-btn;
 
           color: $primary_btn_bg;
           border: 1px solid $primary_btn_bg;
