CORE-42936: WIP PR for discount and vouchers FE work.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-promotion/component/_promo-popup.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-promotion/component/_promo-popup.scss
@@ -17,6 +17,19 @@
     @include breakpoint($only-mobile) {
       float: none;
     }
+
+    .promo-notification {
+      display: none;
+      height: rem(8);
+      width: rem(8);
+      border-radius: 50%;
+      background-color: $hm-promo-available-notification-icon;
+      margin: rem(4);
+    }
+
+    .promo-notification.show-note {
+      display: inline-flex;
+    }
   }
 
   .popup-container {
