CORE-43040: If Customer chooses Aura option, we open a form with three radio button options - Mobile Number, Aura account number and Email address.

--- a/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
@@ -2318,3 +2318,8 @@ $hm-opt-success: $_spc-radio-filled;
 
 // Hello member loyalty SPC
 $hm-loyalty-labels-txt: $grey-light;
+$hm-loyalty-aura-icon: $black-two;
+$hm-loyalty-options-border: $white-smoke-light;
+$hm-loyalty-aura-form-btn: $_aura-disabled;
+$hm-loyalty-aura-form-btn-bg: $white-five;
+$hm-loyalty-aura-disable-select-bg: $greyish;
