CORE-43040: If Customer chooses Aura option, we open a form with three radio button options - Mobile Number, Aura account number and Email address.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-aura-loyalty/component/_hm-aura-mob.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-aura-loyalty/component/_hm-aura-mob.scss
@@ -101,7 +101,7 @@
         font-size: rem(8);
         color: $hm-loyalty-aura-icon;
         transition: transform 0.3s ease-in-out;
-        width: rem(8);;
+        width: rem(8);
         height: rem(8);
       }
     }
