--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-accounts-hello-member/component/_benefits.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-accounts-hello-member/component/_benefits.scss
@@ -108,23 +108,34 @@
   @include breakpoint($only-mobile) {
     padding-left: rem(8);
     padding-right: rem(8);
+    margin-top: rem(3);
   }
 }
 
-.block-alshaya-hello-member {
+.block-my-accounts-hello-member-block,
+.block-hello-member-benefits-block {
   & > h3 {
     font-family: $alshaya-bold;
     font-size: rem(18);
     letter-spacing: rem(1);
     text-align: center;
-    padding: rem(18) 0 rem(16);
+    padding-top: rem(18);
+    text-transform: uppercase;
 
     @include breakpoint($tablet) {
       font-size: rem(20);
-    }    
+      padding-bottom: rem(16);
+      text-transform: none;
+    }
   }
 
   &.no-benefits > h3 {
+    display: none;
+  }
+}
+
+.block-my-accounts-hello-member-block > h3 {
+  @include breakpoint($tablet) {
     display: none;
   }
 }
