CORE-42936: WIP PR for discount and vouchers FE work.

--- a/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/hello-member-promotion/component/_promo-popup.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/hello-member-promotion/component/_promo-popup.scss
@@ -1,4 +1,10 @@
 .hello-member-promo-section {
+  .hm-promo-pop-link {
+    .promo-notification {
+      background-color: $hmn-promo-notification-icon;
+    }
+  }
+
   .popup-container {
     .hm-promo-modal-content {
       .error-info-section {
