--- a/docroot/themes/custom/transac/alshaya_hnm/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/sass/config/_colors.scss
@@ -870,3 +870,6 @@ $hm-accured-points-txt: $hnm-red;
 
 //hello member header block
 $hm-menu-link-txt: $hnm-black-two;
+
+//Hello member promotion
+$hmn-promo-notification-icon: $hnm-red;
