--- a/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
@@ -316,7 +316,6 @@ $white-six: #f9f9f9;
 $light-green: #39b54a;
 $dark-green: #007522;
 $_online-booking-change-delivery-schedule: #4a7fc5;
-$hm-promo-available-notification: #e50011;
 
 /* ------- 2. Primary Colors ------- */
 // Global elements.
@@ -2304,7 +2303,7 @@ $hm-promo-btn-bg: $mothercare-black;
 $hm-promo-err-sec-bg: $light-yellow;
 $hm-promo-radio-btn: $mothercare-black;
 $hm-promo-sel-tab-border: rgba(0, 0, 0, 0.24);
-$hm-promo-available-notification-icon: $hm-promo-available-notification;
+$hm-promo-available-notification-icon: $error-red;
 
 // Hello member history point
 $hm-history-points-light-title: $greyish;
