--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-promotion/component/_promo-popup.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-promotion/component/_promo-popup.scss
@@ -1,7 +1,6 @@
 .hello-member-promo-section {
   @include breakpoint($only-mobile) {
     order: 3;
-    text-align: center;
     background-color: $primary_bg;
     padding-bottom: rem(16);
   }
@@ -16,6 +15,8 @@
 
     @include breakpoint($only-mobile) {
       float: none;
+      justify-content: center;
+      display: flex;
     }
 
     .promo-notification {
@@ -34,7 +35,10 @@
 
   .popup-container {
     .popup-content {
-      width: rem(488) !important;
+      @include breakpoint($tablet) {
+        width: rem(488) !important;
+      }
+
       padding: 0 !important;
     }
 
@@ -45,7 +49,7 @@
       font-family: $alshaya-bold;
       text-align: center;
       padding: rem(15) 0;
-      box-shadow: 0 0.5px 0 0 $hm-promo-sel-tab-border;
+      box-shadow: 0 rem(1) 0 0 $hm-promo-sel-tab-border;
     }
 
     .close-modal {
@@ -62,7 +66,7 @@
     }
 
     .hm-promo-modal-content {
-      padding: rem(14) rem(30);
+      padding: rem(14) 0;
       padding-#{$right}: rem(46);
       padding-#{$left}: rem(36);
 
