CORE-43040: If Customer chooses Aura option, we open a form with three radio button options - Mobile Number, Aura account number and Email address -- comment addressed.

--- a/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/spc-checkout-confirmation/component/_spc-checkout-order-detail.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/spc-checkout-confirmation/component/_spc-checkout-order-detail.scss
@@ -10,7 +10,7 @@
   .spc-order-summary-item {
     .spc-value {
       &.hm-accured-points {
-        color: $hm-accured-points-txt;
+        color: $hello-member-accured-points-txt;
       }
     }
   }
