--- a/docroot/themes/custom/transac/alshaya_hnm/sass/components/header/_header-primary.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/sass/components/header/_header-primary.scss
@@ -132,7 +132,7 @@ header {
       .membership-info-link {
         .info-link {
           font-size: rem(14);
-          color: $hm-menu-link-txt;
+          color: $hello-member-menu-link-txt;
         }
       }
     }
