--- a/docroot/themes/custom/transac/alshaya_hnm/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/sass/config/_colors.scss
@@ -841,32 +841,32 @@ $online-return-eligibility-button-txt: $hnm-black-three;
 $online-return-dark-txt: $hnm-black-three;
 
 // Hello Member membership success popup
-$hm-membership-success-popup-bg: $white-linen;
+$hello-member-membership-success-popup-bg: $white-linen;
 
 // Hello Member registration
-$hm-registration-accordion-bg: $grey9;
-$hm-registration-fields-bg: $grey9;
+$hello-member-registration-accordion-bg: $grey9;
+$hello-member-registration-fields-bg: $grey9;
 
 // Hello Member points block
-$hm-points-block-bg: $white-linen;
-$hm-points-block-light-txt: $nickel;
-$hm-points-block-tier-progress: $gainsboro;
-$hm-points-block-tier-progress-active: $hnm-red;
+$hello-member-points-block-bg: $white-linen;
+$hello-member-points-block-light-txt: $nickel;
+$hello-member-points-block-tier-progress: $gainsboro;
+$hello-member-points-block-tier-progress-active: $hnm-red;
 
 // Hello Member benefit block
-$hm-my-offers-bg: $_grey_11;
-$hm-my-offers-expiry-txt: $grey-light;
-$hm-history-points-light-title: $silver-chalice;
+$hello-member-my-offers-bg: $_grey_11;
+$hello-member-my-offers-expiry-txt: $grey-light;
+$hello-member-history-points-light-title: $silver-chalice;
 
 // Hello member history point
-$hm-points-expiry-accordion-title: $hnm-red;
-$hm-points-expiry-accordion-icon: $hnm-red;
-$hm-benefit-Tnc-txt: $silver-chalice;
+$hello-member-points-expiry-accordion-title: $hnm-red;
+$hello-member-points-expiry-accordion-icon: $hnm-red;
+$hello-member-benefit-Tnc-txt: $silver-chalice;
 
 // hello member pdp
-$hm-pdp-points-earned-txt: $venetian_red;
+$hello-member-pdp-points-earned-txt: $venetian_red;
 // hello member SPC
-$hm-accured-points-txt: $hnm-red;
+$hello-member-accured-points-txt: $hnm-red;
 
 //hello member header block
-$hm-menu-link-txt: $hnm-black-two;
+$hello-member-menu-link-txt: $hnm-black-two;
