--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-membership-info/component/_my-points.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-membership-info/component/_my-points.scss
@@ -12,7 +12,7 @@
   }
 
   .points-block {
-    background: $hm-points-block-bg;
+    background: $hello-member-points-block-bg;
     padding: rem(16) rem(14);
     margin: rem(36) 0 rem(45);
 
@@ -43,7 +43,7 @@
 
     .my-membership-id {
       font-size: rem(11);
-      color: $hm-points-block-light-txt;
+      color: $hello-member-points-block-light-txt;
       text-align: center;
       margin-top: rem(10);
       letter-spacing: 1.5px;
