--- a/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
@@ -2269,57 +2269,57 @@ $online-return-confirmation-note-txt: $greyish;
 $online-return-confirmation-border: $_gray_222;
 
 // Hello Member membership success popup
-$hm-membership-success-popup-bg: $white-five;
-$hm-membership-success-popup-title: $_spc-discount-text;
-$hm-content-link: $black-two;
-$hm-btn-hover: $egift-disabled-gray2;
+$hello-member-membership-success-popup-bg: $white-five;
+$hello-member-membership-success-popup-title: $_spc-discount-text;
+$hello-member-content-link: $black-two;
+$hello-member-btn-hover: $egift-disabled-gray2;
 
 // Hello Member registration
-$hm-registration-accordion-bg: $whisper;
-$hm-registration-fields-bg: $whisper;
-$hm-registration-labels-txt: $grey-light;
-$hm-accordion-txt: $brownish-grey;
+$hello-member-registration-accordion-bg: $whisper;
+$hello-member-registration-fields-bg: $whisper;
+$hello-member-registration-labels-txt: $grey-light;
+$hello-member-accordion-txt: $brownish-grey;
 
 // Hello Member points block
-$hm-points-block-bg: $whisper;
-$hm-points-block-light-txt: $light-ash;
-$hm-points-block-tier-progress: $light-ash;
-$hm-points-block-tier-progress-active: $cherry;
+$hello-member-points-block-bg: $whisper;
+$hello-member-points-block-light-txt: $light-ash;
+$hello-member-points-block-tier-progress: $light-ash;
+$hello-member-points-block-tier-progress-active: $cherry;
 
 // Hello member QR code
-$hm-qr-code-redeem-txt: $grey-light;
-$hm-qr-code-bg: $white-three;
+$hello-member-qr-code-redeem-txt: $grey-light;
+$hello-member-qr-code-bg: $white-three;
 
 // Hello Member benefit block
-$hm-my-offers-bg: $white-three;
-$hm-my-offers-expiry-txt: $grey-light;
+$hello-member-my-offers-bg: $white-three;
+$hello-member-my-offers-expiry-txt: $grey-light;
 
 // Hello member history point
-$hm-history-points-light-title: $greyish;
-$hm-points-expiry-accordion-bg: $white-smoke;
-$hm-points-expiry-accordion-title: $error-red;
-$hm-points-expiry-accordion-icon: $error-red;
+$hello-member-history-points-light-title: $greyish;
+$hello-member-points-expiry-accordion-bg: $white-smoke;
+$hello-member-points-expiry-accordion-title: $error-red;
+$hello-member-points-expiry-accordion-icon: $error-red;
 
 // Hello member benefit landing page.
-$hm-benefit-expiry-txt: $grey-light;
-$hm-benefit-description-bg: $white-smoke-light;
-$hm-benefit-description-txt: $grey-light;
-$hm-benefit-description-heading-txt: $mothercare-black;
-$hm-benefit-Tnc-txt: $grey-light;
+$hello-member-benefit-expiry-txt: $grey-light;
+$hello-member-benefit-description-bg: $white-smoke-light;
+$hello-member-benefit-description-txt: $grey-light;
+$hello-member-benefit-description-heading-txt: $mothercare-black;
+$hello-member-benefit-Tnc-txt: $grey-light;
 
 // hello member pdp
-$hm-pdp-points-earned-txt: $cherry;
+$hello-member-pdp-points-earned-txt: $cherry;
 
 // Hello member otp popup
-$hm-opt-input-bg: $white-five;
-$hm-opt-input-border: $egift-gray;
-$hm-opt-input-focus-border: $mothercare-black;
-$hm-opt-success: $_spc-radio-filled;
+$hello-member-opt-input-bg: $white-five;
+$hello-member-opt-input-border: $egift-gray;
+$hello-member-opt-input-focus-border: $mothercare-black;
+$hello-member-opt-success: $_spc-radio-filled;
 
 // Hello member loyalty SPC
-$hm-loyalty-labels-txt: $grey-light;
-$hm-loyalty-aura-icon: $black-two;
-$hm-loyalty-options-border: $white-smoke-light;
-$hm-loyalty-aura-form-btn: $_aura-disabled;
-$hm-loyalty-aura-form-btn-bg: $white-five;
-$hm-loyalty-aura-disable-select-bg: $greyish;
+$hello-member-loyalty-labels-txt: $grey-light;
+$hello-member-loyalty-aura-icon: $black-two;
+$hello-member-loyalty-options-border: $white-smoke-light;
+$hello-member-loyalty-aura-form-btn: $_aura-disabled;
+$hello-member-loyalty-aura-form-btn-bg: $white-five;
+$hello-member-loyalty-aura-disable-select-bg: $greyish;
