--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-otp/component/_opt-field.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-otp/component/_opt-field.scss
@@ -42,7 +42,7 @@
 
     label,
     span {
-      color: $hm-registration-labels-txt !important;
+      color: $hello-member-registration-labels-txt !important;
     }
 
     label {
@@ -56,7 +56,7 @@
     .error {
       padding-top: 0;
       color: $primary_input_inline_error !important;
-      background: $hm-registration-fields-bg !important;
+      background: $hello-member-registration-fields-bg !important;
     }
 
     #input-otp-error {
@@ -65,26 +65,26 @@
 
     .mobile-input--wrapper {
       input {
-        background-color: $hm-registration-fields-bg !important;
+        background-color: $hello-member-registration-fields-bg !important;
 
         ~ label:not(.active-label) {
-          color: $hm-registration-labels-txt !important;
+          color: $hello-member-registration-labels-txt !important;
         }
       }
     }
 
     .mb-verifier {
-      color: $hm-registration-labels-txt;
+      color: $hello-member-registration-labels-txt;
       padding-top: rem(16);
 
       .verified-msg {
-        color: $hm-opt-success !important;
+        color: $hello-member-opt-success !important;
         display: flex;
         margin-#{$left}: rem(-5);
 
         @include icon(check) {
-          color: $hm-opt-success;
-          background: $hm-registration-fields-bg;
+          color: $hello-member-opt-success;
+          background: $hello-member-registration-fields-bg;
           position: relative;
           font-size: rem(24);
         }
@@ -157,11 +157,11 @@
   .hello-member-otp-popup-form {
     input {
       width: rem(41) !important;
-      background: $hm-opt-input-bg;
-      border-color: $hm-opt-input-border;
+      background: $hello-member-opt-input-bg;
+      border-color: $hello-member-opt-input-border;
 
       &:focus {
-        border-bottom: rem(1) solid $hm-opt-input-focus-border !important;
+        border-bottom: rem(1) solid $hello-member-opt-input-focus-border !important;
       }
     }
 
