CORE-43558: Fixed include_in_desktop key.

--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/handlebars/rcs-main_menu_level1.handlebars
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/handlebars/rcs-main_menu_level1.handlebars
@@ -25,7 +25,7 @@
   <ul class="menu__list menu--one__list">
     <div class="menu-backdrop"></div>
     {{#each menu_items as |menu_item|}}
-      <li class="menu__list-item menu--one__list-item {{ level_class }} {{ promopanel_class }}">
+      <li class="menu__list-item menu--one__list-item {{ level_class }} {{ promopanel_class }} {{ menu_item.include_in_desktop }}">
         <div class="menu__link-wrapper menu-two__link-wrapper">
           {{'// @todo implement style'}}
           {{set 'style' ''}}
