CORE-41962: Super Category | Mobile | Search field is not displayed as separate section in Aerie as in American Eagle.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/super-category/component/_supercategory-menu.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/super-category/component/_supercategory-menu.scss
@@ -606,7 +606,7 @@
     }
   }
 
-  &.alias--shop-aerie {
+  &.super-category-home {
     .mobile--search {
       @include breakpoint($upto-desktop) {
         display: none !important;
