--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/aura-loyalty-forms/component/_aura-modal-form-layout.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/aura-loyalty-forms/component/_aura-modal-form-layout.scss
@@ -505,7 +505,7 @@
 
 @include breakpoint($only-mobile) {
   body.aura-enabled {
-    #block-alshayamainmenu.aura-header-modal-open {
+    .block-alshaya-main-menu.aura-header-modal-open {
       ul.menu__list.menu--one__list {
         width: 100vw;
         top: 0;
