CORE-42938: [Promotion Engine] [BE]- Add to basket from benefits landing page.

--- a/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
@@ -2306,6 +2306,7 @@ $hello-member-benefit-description-bg: $white-smoke-light;
 $hello-member-benefit-description-txt: $grey-light;
 $hello-member-benefit-description-heading-txt: $mothercare-black;
 $hello-member-benefit-Tnc-txt: $grey-light;
+$hm-benefit-cart-icon: $white-five;
 
 // hello member pdp
 $hello-member-pdp-points-earned-txt: $cherry;
