--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-benefit-landing-page/component/_benefits-landing-page.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-benefit-landing-page/component/_benefits-landing-page.scss
@@ -69,6 +69,62 @@
         margin-bottom: rem(32);
       }
     }
+
+    .hm-benefit-status-info {
+      position: fixed;
+      #{$right}: 0;
+      top: 50%;
+      background-color: $hm-benefit-cart-icon;
+      transition: transform 300ms cubic-bezier(0.4, 0, 1, 1);
+      transform: translateX(100%);
+      display: flex;
+      flex-direction: row;
+      text-align: $left;
+      background-color: $hm-benefit-cart-icon;
+      padding: rem(32) rem(24);
+      margin-#{$right}: rem(16);
+      visibility: hidden;
+      width: rem(400);
+      flex-wrap: wrap;
+
+      @include breakpoint($only-mobile) {
+        width: 100%;
+        margin-#{$right}: rem(0);
+      }
+
+      html[lang=ar] & {
+        transform: translateX(-100%);
+      }
+
+      &-active {
+        transition: transform 400ms cubic-bezier(0, 0, 0.2, 1);
+        transform: translateX(0) !important;
+        visibility: visible;
+      }
+
+      #status-msg {
+        font-family: $alshaya-bold;
+        line-height: 1.6;
+        padding-bottom: rem(8);
+      }
+
+      #disc-title {
+        width: 85%;
+        font-size: rem(16);
+        display: flex;
+        line-height: 2;
+      }
+
+      .status-icon {
+        &::before {
+          font-size: rem(32);
+          padding-#{$right}: rem(8);
+          content: "\e905";
+          font-family: $alshaya-icons !important;
+          color: $hello-member-opt-success;
+        }
+      }
+    }
   }
 
   .benefit-description {
