--- a/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
@@ -2328,3 +2328,8 @@ $advanced-page-banner-bg: $_algolia_suggestion_list_bg;
 $advanced-page-banner-title: $_gray_222;
 $advanced-page-button: $_gray_222;
 $advanced-page-button-hover: $button-hover;
+
+// Hello Member Info Page
+$link-borders: $_gray_222;
+$hello-member-components-bg: $grey-shade;
+$hello-member-highlight-text: $primary_text;
